# lib/db/src/schema/inventory.ts
@@ -8,7 +8,9 @@ export const productsTable = pgTable("inventory_products", {
   userId: text("user_id").notNull(),
   name: text("name").notNull(),
   brand: text("brand"),
+  category: text("category"),
   content: text("content"),
+  description: text("description"),
   cost: integer("cost").notNull(),
   salePrice: integer("sale_price").notNull(),
   stock: integer("stock").notNull().default(0),
